# TrainingFT

./: .gitignore  README.md  pyproject.toml
.github/workflows/: azure-pipeline.yaml
TrainingFT.egg-info/: PKG-INFO  top_level.txt
src/azuremlapp/: .env
src/azuremlapp/resources/: fraud_model.pkl
src/azuremlapp/utils/: fraud_train.py  score.py
